fixed 3 steps width on IE11

--- a/src/mrs/static/sass/landing.sass
+++ b/src/mrs/static/sass/landing.sass
@@ -152,6 +152,9 @@ section
 #s3
   background-color: #2f343b
 
+.processes--wrapper
+  width: 100%
+
 .process--wrapper
   display: flex
   align-items: center
@@ -169,6 +172,7 @@ section
     background-color: white
     padding: 1rem
     border-radius: 5px
+    flex: 1
 
     h2
       color: #0dc5b9
